@@ -138,9 +138,10 @@ Possible instruction types, passed through bx_instr_tlb_cntrl:
 	#define BX_INSTR_INVLPG         15
 	#define BX_INSTR_INVEPT         16
 	#define BX_INSTR_INVVPID        17
+	#define BX_INSTR_INVPCID        18
 
-The new_cr_value is provided  for first for instruction types only and will be
-undefined for all others.
+The new_cr_value is provided for first 4 instruction types  only and undefined
+for all others.
 
 Possible instruction types, passed through bx_instr_cache_cntrl:
 
